// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet: #0 [acorn] format 1`] = `
"Optional chaining cannot appear in the callee of new expressions (1:21)
> 1 | const baz3 = new obj?.foo?.bar?.baz(); // baz instance
    |                     ^
Cause: Optional chaining cannot appear in the callee of new expressions (1:20)"
`;

exports[`snippet: #0 [babel] format 1`] = `
"Constructors in/after an Optional Chain are not allowed. (1:21)
> 1 | const baz3 = new obj?.foo?.bar?.baz(); // baz instance
    |                     ^
Cause: Constructors in/after an Optional Chain are not allowed. (1:20)"
`;

exports[`snippet: #0 [espree] format 1`] = `
"Optional chaining cannot appear in the callee of new expressions (1:21)
> 1 | const baz3 = new obj?.foo?.bar?.baz(); // baz instance
    |                     ^
Cause: Optional chaining cannot appear in the callee of new expressions"
`;

exports[`snippet: #0 [meriyah] format 1`] = `
"Invalid optional chain from new expression (1:22)
> 1 | const baz3 = new obj?.foo?.bar?.baz(); // baz instance
    |                      ^
Cause: [1:22]: Invalid optional chain from new expression"
`;

exports[`snippet: #1 [acorn] format 1`] = `
"Optional chaining cannot appear in the callee of new expressions (1:22)
> 1 | const safe5 = new obj?.qux?.baz(); // undefined
    |                      ^
Cause: Optional chaining cannot appear in the callee of new expressions (1:21)"
`;

exports[`snippet: #1 [babel] format 1`] = `
"Constructors in/after an Optional Chain are not allowed. (1:22)
> 1 | const safe5 = new obj?.qux?.baz(); // undefined
    |                      ^
Cause: Constructors in/after an Optional Chain are not allowed. (1:21)"
`;

exports[`snippet: #1 [espree] format 1`] = `
"Optional chaining cannot appear in the callee of new expressions (1:22)
> 1 | const safe5 = new obj?.qux?.baz(); // undefined
    |                      ^
Cause: Optional chaining cannot appear in the callee of new expressions"
`;

exports[`snippet: #1 [meriyah] format 1`] = `
"Invalid optional chain from new expression (1:23)
> 1 | const safe5 = new obj?.qux?.baz(); // undefined
    |                       ^
Cause: [1:23]: Invalid optional chain from new expression"
`;

exports[`snippet: #2 [acorn] format 1`] = `
"Optional chaining cannot appear in the callee of new expressions (1:22)
> 1 | const safe6 = new obj?.foo.bar.qux?.(); // undefined
    |                      ^
Cause: Optional chaining cannot appear in the callee of new expressions (1:21)"
`;

exports[`snippet: #2 [babel] format 1`] = `
"Constructors in/after an Optional Chain are not allowed. (1:22)
> 1 | const safe6 = new obj?.foo.bar.qux?.(); // undefined
    |                      ^
Cause: Constructors in/after an Optional Chain are not allowed. (1:21)"
`;

exports[`snippet: #2 [espree] format 1`] = `
"Optional chaining cannot appear in the callee of new expressions (1:22)
> 1 | const safe6 = new obj?.foo.bar.qux?.(); // undefined
    |                      ^
Cause: Optional chaining cannot appear in the callee of new expressions"
`;

exports[`snippet: #2 [meriyah] format 1`] = `
"Invalid optional chain from new expression (1:23)
> 1 | const safe6 = new obj?.foo.bar.qux?.(); // undefined
    |                       ^
Cause: [1:23]: Invalid optional chain from new expression"
`;

exports[`snippet: #3 [acorn] format 1`] = `
"Optional chaining cannot appear in the callee of new expressions (1:26)
> 1 | const willThrow = new obj?.foo.bar.qux(); // Error: not a constructor
    |                          ^
Cause: Optional chaining cannot appear in the callee of new expressions (1:25)"
`;

exports[`snippet: #3 [babel] format 1`] = `
"Constructors in/after an Optional Chain are not allowed. (1:26)
> 1 | const willThrow = new obj?.foo.bar.qux(); // Error: not a constructor
    |                          ^
Cause: Constructors in/after an Optional Chain are not allowed. (1:25)"
`;

exports[`snippet: #3 [espree] format 1`] = `
"Optional chaining cannot appear in the callee of new expressions (1:26)
> 1 | const willThrow = new obj?.foo.bar.qux(); // Error: not a constructor
    |                          ^
Cause: Optional chaining cannot appear in the callee of new expressions"
`;

exports[`snippet: #3 [meriyah] format 1`] = `
"Invalid optional chain from new expression (1:27)
> 1 | const willThrow = new obj?.foo.bar.qux(); // Error: not a constructor
    |                           ^
Cause: [1:27]: Invalid optional chain from new expression"
`;

exports[`snippet: #4 [acorn] format 1`] = `
"Optional chaining cannot appear in the callee of new expressions (4:9)
  2 | class Test {
  3 | }
> 4 | new Test?.(); // test instance
    |         ^
Cause: Optional chaining cannot appear in the callee of new expressions (4:8)"
`;

exports[`snippet: #4 [babel] format 1`] = `
"Constructors in/after an Optional Chain are not allowed. (4:9)
  2 | class Test {
  3 | }
> 4 | new Test?.(); // test instance
    |         ^
Cause: Constructors in/after an Optional Chain are not allowed. (4:8)"
`;

exports[`snippet: #4 [espree] format 1`] = `
"Optional chaining cannot appear in the callee of new expressions (4:9)
  2 | class Test {
  3 | }
> 4 | new Test?.(); // test instance
    |         ^
Cause: Optional chaining cannot appear in the callee of new expressions"
`;

exports[`snippet: #4 [meriyah] format 1`] = `
"Invalid optional chain from new expression (4:10)
  2 | class Test {
  3 | }
> 4 | new Test?.(); // test instance
    |          ^
Cause: [4:10]: Invalid optional chain from new expression"
`;

exports[`snippet: #5 [acorn] format 1`] = `
"Optional chaining cannot appear in the callee of new expressions (1:11)
> 1 | new exists?.(); // undefined
    |           ^
Cause: Optional chaining cannot appear in the callee of new expressions (1:10)"
`;

exports[`snippet: #5 [babel] format 1`] = `
"Constructors in/after an Optional Chain are not allowed. (1:11)
> 1 | new exists?.(); // undefined
    |           ^
Cause: Constructors in/after an Optional Chain are not allowed. (1:10)"
`;

exports[`snippet: #5 [espree] format 1`] = `
"Optional chaining cannot appear in the callee of new expressions (1:11)
> 1 | new exists?.(); // undefined
    |           ^
Cause: Optional chaining cannot appear in the callee of new expressions"
`;

exports[`snippet: #5 [meriyah] format 1`] = `
"Invalid optional chain from new expression (1:12)
> 1 | new exists?.(); // undefined
    |            ^
Cause: [1:12]: Invalid optional chain from new expression"
`;
